# live-fraud-detection-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RENDER_TRIGGER.txt  config.py  dashboard.py  docker-compose.prod.yml  docker-compose.yml  fly.toml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_all.py  test_debug.db  test_spam.py
.github/workflows/: keep-alive.yml  keep-awake.yml  phase10-ci-cd.yml
agents/: fraud_agents..py  fraud_agents.py  tools.py
app/: events.py  main.py  routes.py
app/db/: connections.py  models.py
data/: sample_transactions.csv
docs/: API.md  ROADMAP.md  model-development.md
evals/: eval.py  langsmith_eval.py
model/: feature_list.pkl  fraud_model.json
notebooks/: 01_eda.ipynb  02_training.ipynb
reports/: feature_importance.csv  training_metrics.json
scripts/: generate_sample_transactions.py  run_eda.py  test_rate_limit.py  train_model.py
src/: agent_review.py  features.py  inference.py  output_guard.py  policy.py  transaction_generator.py
tests/: test_agent_review.py  test_api.py  test_features.py  test_policy.py  test_rate_limit.py
