[project]
name = "fraud"
version = "0.1.0"
description = "Real-time fraud detection with XGBoost, FastAPI, and an agentic review layer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.129.0",
    "joblib>=1.5.3",
    "langchain>=1.2.10",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.8",
    "langsmith>=0.7.4",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "redis>=7.4.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.41.0",
    "xgboost>=3.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
exclude = [
    "notebooks",
]

[tool.ruff.lint]
ignore = [
    "E402",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
    "ruff>=0.12.5",
    "safety>=3.7.0",
]
